Update LLM course

--- a/torch_examples.ipynb
+++ b/torch_examples.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
+    "import torch.nn as nn\n",
     "from tqdm import tqdm\n",
     "import time\n",
     "device = 'cuda' if torch.cuda.is_available() else 'cpu'"
@@ -354,6 +355,194 @@
    "source": [
     "out = torch.triu(torch.ones(5,5))\n",
     "out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0., -inf, -inf, -inf, -inf],\n",
+       "        [0., 0., -inf, -inf, -inf],\n",
+       "        [0., 0., 0., -inf, -inf],\n",
+       "        [0., 0., 0., 0., -inf],\n",
+       "        [0., 0., 0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out = torch.zeros(5, 5).masked_fill(torch.tril(torch.ones(5, 5))==0, float('-inf'))\n",
+    "out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1., 0., 0., 0., 0.],\n",
+       "        [1., 1., 0., 0., 0.],\n",
+       "        [1., 1., 1., 0., 0.],\n",
+       "        [1., 1., 1., 1., 0.],\n",
+       "        [1., 1., 1., 1., 1.]])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.exp(out)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([4, 3, 2])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Swaping 0-th and 2-nd dimensions\n",
+    "inp = torch.zeros(2, 3, 4)\n",
+    "out = inp.transpose(0, 2)\n",
+    "out.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1, 2, 3],\n",
+       "        [4, 5, 6],\n",
+       "        [7, 8, 9]])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tensor1 = torch.tensor([1, 2, 3])\n",
+    "tensor2 = torch.tensor([4, 5, 6])\n",
+    "tensor3 = torch.tensor([7, 8, 9])\n",
+    "\n",
+    "# Stack the tensors along a new dimension\n",
+    "stacked_tensor = torch.stack([tensor1, tensor2, tensor3])\n",
+    "stacked_tensor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([7.8535, 5.2036, 5.6694], grad_fn=<SqueezeBackward3>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch.nn as nn\n",
+    "\n",
+    "torch.manual_seed(42)\n",
+    "# Neural net with linear layer\n",
+    "sample = torch.tensor([10., 10., 10.])\n",
+    "linear = nn.Linear(3, 3, bias=False)\n",
+    "print(linear(sample))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([0.0900, 0.2447, 0.6652])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch.nn.functional as F \n",
+    "\n",
+    "# Create a tensor\n",
+    "tensor1 = torch.tensor([1.0, 2.0, 3.0])\n",
+    "\n",
+    "# Apply softmax using torch.nn.functional.softmax()\n",
+    "# exp(x_i) / sum (exp(x_j)), j = 1, .. N\n",
+    "softmax_output = F.softmax(tensor1, dim=0)\n",
+    "\n",
+    "print(softmax_output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([4, 100])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Initialize an embedding layer\n",
+    "vocab_size = 1000\n",
+    "embedding_dim = 100\n",
+    "embedding = nn.Embedding(vocab_size, embedding_dim=embedding_dim)\n",
+    "\n",
+    "# Create some input indicies\n",
+    "input_indices = torch.LongTensor([1, 5, 3, 2])\n",
+    "\n",
+    "# Apply the embedding layer\n",
+    "embedded_output = embedding(input_indices)\n",
+    "\n",
+    "# The output will be a tensor of shape (4, 100), where 4 is the number of inputs\n",
+    "# and 100 is the dimensionality of the embedding vector\n",
+    "print(embedded_output.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Stopped at 1:13:12 of 5:43:40"
    ]
   }
  ],
