Update LLM course

--- a/miniGPT.ipynb
+++ b/miniGPT.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
        "tensor([27, 38, 41,  ..., 66, 56,  0])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
        "torch.Size([232143])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -237,13 +237,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([ 85566, 138096,  42216,  89651])\n",
+      "inputs:\n",
+      "tensor([[60, 53, 56,  1, 72, 70, 61, 57],\n",
+      "        [67, 66,  1, 72, 67, 68,  1, 67],\n",
+      "        [ 1, 61, 72,  1, 56, 61, 71, 53],\n",
+      "        [64, 67, 75,  8,  1, 70, 61, 68]])\n",
+      "targets:\n",
+      "tensor([[53, 56,  1, 72, 70, 61, 57, 56],\n",
+      "        [66,  1, 72, 67, 68,  1, 67, 58],\n",
+      "        [61, 72,  1, 56, 61, 71, 53, 68],\n",
+      "        [67, 75,  8,  1, 70, 61, 68, 68]])\n"
+     ]
+    }
+   ],
    "source": [
     "n = int(0.8 * len(data))\n",
     "train_data = data[:n]\n",
-    "val_data = data[n:]"
+    "val_data = data[n:]\n",
+    "\n",
+    "def get_batch(split):\n",
+    "    data = train_data if split == 'train' else val_data\n",
+    "    ix = torch.randint(len(data) - block_size, (batch_size,))\n",
+    "    print(ix)\n",
+    "    x = torch.stack([data[i:i+block_size] for i in ix])\n",
+    "    y = torch.stack([data[i+1:i+block_size+1] for i in ix])\n",
+    "    return x,y\n",
+    "\n",
+    "x,y = get_batch('train')\n",
+    "print(\"inputs:\")\n",
+    "print(x)\n",
+    "print(\"targets:\")\n",
+    "print(y)\n"
    ]
   },
   {
@@ -281,6 +313,15 @@
     "    context = x[:t+1]\n",
     "    target = y[t]\n",
     "    print(f\"When input is {context} target is {target}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Stopped at 1:33:13 of 5:43:40"
    ]
   }
  ],
