--- a/torch_examples.ipynb
+++ b/torch_examples.ipynb
@@ -538,6 +538,78 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[ 27,  30,  33],\n",
+      "        [ 61,  68,  75],\n",
+      "        [ 95, 106, 117]])\n",
+      "tensor([[ 27,  30,  33],\n",
+      "        [ 61,  68,  75],\n",
+      "        [ 95, 106, 117]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Matrix multiplication\n",
+    "a = torch.tensor([[1,2],[3,4],[5,6]])   # (3,2)\n",
+    "b = torch.tensor([[7,8,9],[10,11,12]])  # (2,3)\n",
+    "print(a@b)\n",
+    "print(torch.matmul(a,b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0., 0., 0.],\n",
+      "        [0., 0., 0.],\n",
+      "        [0., 0., 0.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "#int_64 = torch.randint(1, (3, 2)) # Error: expected scalar type Long but found Float\n",
+    "int_64 = torch.randint(1, (3, 2)).float()\n",
+    "# type: int64\n",
+    "float_32 = torch.rand(2, 3)\n",
+    "# type: float32\n",
+    "result = torch.matmul(int_64, float_32)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
    "outputs": [],
