Update LLM course 20230111

--- a/miniGPT.ipynb
+++ b/miniGPT.ipynb
@@ -2,11 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
+    "import torch.nn as nn\n",
+    "from torch.nn import functional as F \n",
     "from tqdm import tqdm\n",
     "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
     "\n",
@@ -45,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -59,12 +61,12 @@
    "source": [
     "chars = sorted(set(text))\n",
     "print(chars)\n",
-    "vocabualry_size = len(chars)"
+    "vocab_size = len(chars)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -73,13 +75,13 @@
        "79"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "vocabualry_size"
+    "vocab_size"
    ]
   },
   {
@@ -316,12 +318,48 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If we have 80 symbols, the probability of right prediction the next symbol is 1/80. How to measure a loss? \n",
+    "\n",
+    "-log(1/80) = 4.38202"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Stopped at 1:33:13 of 5:43:40"
+    "class BigramLanguageMOdel(nn.Module):\n",
+    "    def __init__(self, vocab_size):\n",
+    "        super().__init__()\n",
+    "        self.token_embedding_table = nn.Embedding(vocab_size, vocab_size)\n",
+    "    \n",
+    "    def forward(self, index, targets):\n",
+    "        logits = self.token_embedding_table(index)\n",
+    "        return logits\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Stopped at 1:50:36 of 5:43:40"
    ]
   }
  ],
