Update LLM course 20240113

--- a/miniGPT.ipynb
+++ b/miniGPT.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -332,9 +332,25 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 55,
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([2, 3, 5])\n",
+      "2 3 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = torch.rand(2,3,5)\n",
+    "print(a.shape)\n",
+    "x,y,z = a.shape\n",
+    "print(x,y,z)"
+   ]
   },
   {
    "cell_type": "code",
@@ -349,6 +365,10 @@
     "    \n",
     "    def forward(self, index, targets):\n",
     "        logits = self.token_embedding_table(index)\n",
+    "        B, T, C  = logits.shape # Batch, Time, Channel\n",
+    "        logits = logits.view(B*T, C)\n",
+    "        targets = targets.view(B*T)\n",
+    "        loss = F.cross_entropy(logits, targets)\n",
     "        return logits\n",
     "    "
    ]
@@ -359,7 +379,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Stopped at 1:50:36 of 5:43:40"
+    "# Stopped at 1:58:37 of 5:43:40"
    ]
   }
  ],
