--- a/miniGPT.ipynb
+++ b/miniGPT.ipynb
@@ -354,23 +354,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "_fy71no6x,J-yjLFX:hy-PozyE5!!u7s.Yx'PlmlrkXqon2OFpePToHA0s6TJkhw\"?nu7SR:h,cI!b)\"\n",
+      "\"T]mt&nerB&5:B2BXQ2ZTfg7'mjz0,iAGcbzx)CF:xjcI\"d';7dD]s[tDiFC09Q0 &3qFZjC\n",
+      "UPl'5W8Zj8 &La';V1.x1t\n",
+      "Hr6aPSe\n",
+      "wBScUQ\n",
+      "Klvn1u,?.z6H,m:aIV1WHAHT,8JdB!70uLWp.n2Q5(2[sw'8SXiTUUOIilUHA;Zfkj?UNqqF:MLmOP2dOA'HHYLfFtU)diSccGd2Cv]_0Fj?cME5dTf1.0_k_vf9K1Zr.kwESYiyN0JaD59OyRT\"WM(Y4;mC:xjc[Om5cr\"p:h8XGKa]:bbiKQX&p1RWcwf,,a;_.LzZj1Y[W?32doHkueq_\"aPeX2ol8-,8Ah 0xP(F4;w?h5XtFJE2 3tBuUIV_KSbue1y]4AS,8tV[[_oGBdyNsoHMuqE[CcUr9!6ELs\n",
+      ";mzZlaWe\n"
+     ]
+    }
+   ],
    "source": [
-    "class BigramLanguageMOdel(nn.Module):\n",
+    "class BigramLanguageModel(nn.Module):\n",
     "    def __init__(self, vocab_size):\n",
     "        super().__init__()\n",
     "        self.token_embedding_table = nn.Embedding(vocab_size, vocab_size)\n",
     "    \n",
-    "    def forward(self, index, targets):\n",
+    "    def forward(self, index, targets=None):\n",
     "        logits = self.token_embedding_table(index)\n",
-    "        B, T, C  = logits.shape # Batch, Time, Channel\n",
-    "        logits = logits.view(B*T, C)\n",
-    "        targets = targets.view(B*T)\n",
-    "        loss = F.cross_entropy(logits, targets)\n",
-    "        return logits\n",
-    "    "
+    "        \n",
+    "        if targets is None:\n",
+    "            loss = None\n",
+    "        else:\n",
+    "            B, T, C  = logits.shape # Batch, Time, Channel\n",
+    "            logits = logits.view(B*T, C)\n",
+    "            targets = targets.view(B*T)\n",
+    "            loss = F.cross_entropy(logits, targets)\n",
+    "        return logits, loss\n",
+    "    \n",
+    "    def generate(self, index, max_new_tokens):\n",
+    "        # index is (B, T) array of indices in the current context\n",
+    "        for _ in range(max_new_tokens):\n",
+    "            # get the predictions\n",
+    "            logits, loss = self.forward(index)\n",
+    "            # focus only on the last time step\n",
+    "            logits = logits[:, -1, :] # becomes (B, C)\n",
+    "            # apply softmax to get probabilities\n",
+    "            probs = F.softmax(logits, dim=-1)  # (B, C)\n",
+    "            # sample from the distribution\n",
+    "            index_next = torch.multinomial(probs, num_samples=1) # (B, 1)\n",
+    "            # append sampled index to the running sequence\n",
+    "            index = torch.cat((index, index_next), dim=1) # (B, T+1)\n",
+    "        return index\n",
+    "    \n",
+    "model = BigramLanguageModel(vocab_size=vocab_size)\n",
+    "m = model.to(device)\n",
+    "        \n",
+    "context = torch.zeros((1, 1), dtype=torch.long, device=device)\n",
+    "generated_chars = decode(m.generate(context, max_new_tokens=500)[0].tolist())\n",
+    "print(generated_chars)"
    ]
   },
   {
@@ -379,7 +419,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Stopped at 1:58:37 of 5:43:40"
+    "# Stopped at 2:05:35 of 5:43:40"
    ]
   }
  ],
