Add some new functions 20240121

--- a/emb_test_01.ipynb
+++ b/emb_test_01.ipynb
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
        "6  2022-01-02          1     700"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 180,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +449,7 @@
        "2    0  500  600"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1209,6 +1209,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 172,
    "metadata": {},
    "outputs": [
@@ -1303,6 +1310,333 @@
     "# test_input = # torch tensor (1, 64)\n",
     "# outputs = model.generate(test_input)  \n",
     "# print(tokenizer.decode(outputs[0]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Selected Spaces Algorithm for embeddings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Normalized embeddings shape: torch.Size([10000, 64])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "from torch import nn\n",
+    "\n",
+    "# Define the 4S embedding model with a normalization layer\n",
+    "class FourS(nn.Module):\n",
+    "    def __init__(self, input_dim, output_dim, num_spaces):\n",
+    "        super().__init__()\n",
+    "        self.input_dim = input_dim\n",
+    "        self.output_dim = output_dim\n",
+    "        self.num_spaces = num_spaces\n",
+    "        self.projections = nn.Parameter(torch.randn(num_spaces, input_dim, output_dim))\n",
+    "        self.norm_layer = nn.BatchNorm1d(num_spaces * output_dim)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        # x is a tensor of shape [batch_size, input_dim]\n",
+    "        # We apply each projection to x and concatenate the results\n",
+    "        projections = self.projections.view(self.num_spaces, self.input_dim, self.output_dim)\n",
+    "        outputs = []\n",
+    "        for i in range(self.num_spaces):\n",
+    "            proj = projections[i]\n",
+    "            out = torch.matmul(x, proj)\n",
+    "            out = out.view(-1, self.output_dim)\n",
+    "            outputs.append(out)\n",
+    "        outputs = torch.cat(outputs, dim=1)\n",
+    "        outputs_norm = self.norm_layer(outputs)\n",
+    "        return outputs_norm\n",
+    "\n",
+    "# Define the input data\n",
+    "input_data = torch.randint(0, 10, size=(10000, 90))\n",
+    "\n",
+    "# Define the model hyperparameters\n",
+    "input_dim = 90\n",
+    "output_dim = 16\n",
+    "num_spaces = 4\n",
+    "\n",
+    "# Create the 4S model and get the normalized embeddings\n",
+    "model = FourS(input_dim, output_dim, num_spaces)\n",
+    "embeddings_norm = model(input_data.float())\n",
+    "\n",
+    "print('Normalized embeddings shape:', embeddings_norm.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([-1.4570,  1.5275,  0.2292,  2.1455,  0.0325,  0.1854,  0.4995, -0.9998,\n",
+       "         0.2611,  0.4417,  0.1673,  1.1868,  0.3305,  1.6897, -0.7211, -0.5776,\n",
+       "        -0.6322, -0.6217, -0.1275,  1.5213,  0.9654, -0.5855,  1.5000, -1.4257,\n",
+       "        -0.3753,  0.5296,  2.4011,  0.4951,  0.4865,  0.8317,  0.1023, -1.0797,\n",
+       "        -0.4966,  2.6802,  0.3527,  0.8279,  2.0364, -0.5189,  0.2243,  0.1004,\n",
+       "        -1.2679,  0.3633, -0.8792,  0.6600,  0.6296, -0.2730, -0.1938, -0.4235,\n",
+       "         1.8785, -0.0555,  0.9235,  0.6632,  1.6794,  0.6345, -1.5865, -0.8260,\n",
+       "         0.9089, -1.8266, -0.8179,  1.1316, -1.2314,  0.2042,  0.5463, -0.3221],\n",
+       "       grad_fn=<SelectBackward>)"
+      ]
+     },
+     "execution_count": 187,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "embeddings_norm[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Multi-head attention Embeddings (v 1.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 224,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "# Define model architecture\n",
+    "class MultiHeadAttention(nn.Module):\n",
+    "    def __init__(self, input_size, hidden_size, output_size, num_heads):\n",
+    "        super().__init__()\n",
+    "        self.hidden_size = hidden_size\n",
+    "        self.num_heads = num_heads\n",
+    "        self.fc_q = nn.Linear(input_size, hidden_size * num_heads)\n",
+    "        self.fc_k = nn.Linear(input_size, hidden_size * num_heads)\n",
+    "        self.fc_v = nn.Linear(input_size, hidden_size * num_heads)\n",
+    "        self.fc_o = nn.Linear(hidden_size * num_heads, output_size)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        # x is a tensor of shape [batch_size, input_size]\n",
+    "        q = self.fc_q(x).view(-1, self.num_heads, self.hidden_size)\n",
+    "        k = self.fc_k(x).view(-1, self.num_heads, self.hidden_size)\n",
+    "        v = self.fc_v(x).view(-1, self.num_heads, self.hidden_size)\n",
+    "        attn_weights = torch.matmul(q, k.transpose(1,2)) / np.sqrt(self.hidden_size)\n",
+    "        attn_weights = nn.functional.softmax(attn_weights, dim=-1)\n",
+    "        attn_output = torch.matmul(attn_weights, v)\n",
+    "        attn_output = attn_output.view(-1, self.num_heads * self.hidden_size)\n",
+    "        output = self.fc_o(attn_output)\n",
+    "        return output\n",
+    "\n",
+    "# Load data\n",
+    "data = pd.DataFrame(np.random.randint(0, 10, size=(1000, 90)))\n",
+    "\n",
+    "# Define model and optimizer\n",
+    "model = MultiHeadAttention(input_size=90, hidden_size=32, output_size=90, num_heads=4)\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=0.001)\n",
+    "\n",
+    "# Train model\n",
+    "for epoch in range(10):\n",
+    "    for i in range(data.shape[0]):\n",
+    "        x = torch.tensor(data.iloc[i].values).float()\n",
+    "        target = torch.tensor(data.iloc[i].values).float().unsqueeze(0) # create target tensor\n",
+    "        optimizer.zero_grad()\n",
+    "        embedding = model(x)\n",
+    "        loss = nn.MSELoss()(embedding, target) # use target tensor in loss function\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "\n",
+    "# Obtain embeddings\n",
+    "embeddings = []\n",
+    "for i in range(data.shape[0]):\n",
+    "    x = torch.tensor(data.iloc[i].values).float() # example\n",
+    "    # x = torch.tensor(data.iloc[i])\n",
+    "    embedding = model(x)\n",
+    "    embeddings.append(embedding.detach().numpy())\n",
+    "\n",
+    "embeddings = np.array(embeddings).squeeze()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 225,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1000, 90)"
+      ]
+     },
+     "execution_count": 225,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "embeddings.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 226,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-2.974353"
+      ]
+     },
+     "execution_count": 226,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.min(embeddings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 227,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12.529156"
+      ]
+     },
+     "execution_count": 227,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.max(embeddings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 218,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 3.8100078 ,  2.7085774 ,  2.9487062 ,  2.112334  ,  5.820677  ,\n",
+       "        7.4669156 ,  8.716246  ,  8.113524  ,  4.1364403 ,  6.2789807 ,\n",
+       "        2.9297287 ,  6.929965  ,  7.551001  ,  4.271658  ,  4.89334   ,\n",
+       "        2.132341  ,  0.74783826,  6.1629353 ,  0.43225163,  5.2012253 ,\n",
+       "        6.236289  ,  1.0360222 ,  2.3752785 ,  2.6557488 ,  5.048148  ,\n",
+       "        8.744026  ,  7.0900884 ,  3.1869135 ,  5.1493278 ,  5.2860093 ,\n",
+       "        2.3979702 ,  8.5128    ,  6.3425417 ,  2.9726214 ,  4.483811  ,\n",
+       "        5.023955  ,  7.650864  ,  3.1130555 , -0.8656823 ,  2.3683805 ,\n",
+       "        3.4622638 ,  2.3179264 ,  7.5978994 ,  3.423575  ,  3.680879  ,\n",
+       "        7.4869924 ,  2.3528352 ,  5.531221  ,  3.6308594 ,  0.32532167,\n",
+       "        5.617105  ,  5.130931  ,  0.10641079,  5.2851295 ,  3.8298962 ,\n",
+       "        6.3099093 ,  6.7193294 ,  3.5011563 ,  5.7457614 ,  1.8223001 ,\n",
+       "        6.234529  ,  3.6299877 ,  0.8753604 ,  2.9234314 ,  3.8466666 ,\n",
+       "        8.951225  ,  2.9078517 ,  5.214989  ,  4.2363772 ,  4.313983  ,\n",
+       "        4.1109176 ,  1.6675433 ,  4.481912  ,  4.1453238 ,  5.2172747 ,\n",
+       "        3.0246303 ,  2.189898  ,  4.628448  ,  4.7052727 ,  7.421304  ,\n",
+       "        3.322929  ,  2.9411142 ,  5.2576294 ,  0.49039942,  0.90339786,\n",
+       "        0.26909494,  3.5931177 ,  5.1582885 ,  7.432614  ,  5.262006  ],\n",
+       "      dtype=float32)"
+      ]
+     },
+     "execution_count": 218,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "embeddings[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Multi-head attention embeddings v. 2.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 235,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "shape '[1000, -1, 8, 11]' is invalid for input of size 90000",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[235], line 38\u001b[0m\n\u001b[1;32m     34\u001b[0m data \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(np\u001b[38;5;241m.\u001b[39mrandom\u001b[38;5;241m.\u001b[39mrandint(\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m10\u001b[39m, size\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m1000\u001b[39m, \u001b[38;5;241m90\u001b[39m)))\n\u001b[1;32m     36\u001b[0m input_vectors \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mtensor(data\u001b[38;5;241m.\u001b[39mvalues)\u001b[38;5;241m.\u001b[39mfloat()\u001b[38;5;241m.\u001b[39munsqueeze(\u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m---> 38\u001b[0m output_vectors \u001b[38;5;241m=\u001b[39m \u001b[43mmha\u001b[49m\u001b[43m(\u001b[49m\u001b[43minput_vectors\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minput_vectors\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minput_vectors\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/opt/anaconda3/lib/python3.9/site-packages/torch/nn/modules/module.py:1051\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *input, **kwargs)\u001b[0m\n\u001b[1;32m   1047\u001b[0m \u001b[38;5;66;03m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   1048\u001b[0m \u001b[38;5;66;03m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   1049\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m (\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   1050\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> 1051\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mforward_call\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1052\u001b[0m \u001b[38;5;66;03m# Do not call functions when jit is used\u001b[39;00m\n\u001b[1;32m   1053\u001b[0m full_backward_hooks, non_full_backward_hooks \u001b[38;5;241m=\u001b[39m [], []\n",
+      "Cell \u001b[0;32mIn[235], line 17\u001b[0m, in \u001b[0;36mMultiHeadAttention.forward\u001b[0;34m(self, queries, keys, values)\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mforward\u001b[39m(\u001b[38;5;28mself\u001b[39m, queries, keys, values):\n\u001b[0;32m---> 17\u001b[0m     q \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mproj_query\u001b[49m\u001b[43m(\u001b[49m\u001b[43mqueries\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mview\u001b[49m\u001b[43m(\u001b[49m\u001b[43mqueries\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msize\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnum_heads\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43md_model\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnum_heads\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mpermute(\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m3\u001b[39m)\n\u001b[1;32m     18\u001b[0m     k \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mproj_key(keys)\u001b[38;5;241m.\u001b[39mview(keys\u001b[38;5;241m.\u001b[39msize(\u001b[38;5;241m0\u001b[39m), \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnum_heads, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39md_model \u001b[38;5;241m/\u001b[39m\u001b[38;5;241m/\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnum_heads)\u001b[38;5;241m.\u001b[39mpermute(\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m3\u001b[39m)\n\u001b[1;32m     19\u001b[0m     v \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mproj_value(values)\u001b[38;5;241m.\u001b[39mview(values\u001b[38;5;241m.\u001b[39msize(\u001b[38;5;241m0\u001b[39m), \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnum_heads, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39md_model \u001b[38;5;241m/\u001b[39m\u001b[38;5;241m/\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnum_heads)\u001b[38;5;241m.\u001b[39mpermute(\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m3\u001b[39m)\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: shape '[1000, -1, 8, 11]' is invalid for input of size 90000"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "\n",
+    "class MultiHeadAttention(nn.Module):\n",
+    "    def __init__(self, d_model, num_heads):\n",
+    "        super(MultiHeadAttention, self).__init__()\n",
+    "        self.d_model = d_model\n",
+    "        self.num_heads = num_heads\n",
+    "        self.proj_query = nn.Linear(d_model, d_model)\n",
+    "        self.proj_key = nn.Linear(d_model, d_model)\n",
+    "        self.proj_value = nn.Linear(d_model, d_model)\n",
+    "        self.proj_out = nn.Linear(d_model, d_model)\n",
+    "        self.dropout = nn.Dropout(0.1)\n",
+    "\n",
+    "    def forward(self, queries, keys, values):\n",
+    "        batch_size = queries.size(0)\n",
+    "        q = self.proj_query(queries)\n",
+    "        k = self.proj_key(keys)\n",
+    "        v = self.proj_value(values)\n",
+    "        q = q.view(-1, self.num_heads, self.d_model // self.num_heads)\n",
+    "        k = k.view(-1, self.num_heads, self.d_model // self.num_heads)\n",
+    "        v = v.view(-1, self.num_heads, self.d_model // self.num_heads)\n",
+    "        scores = torch.matmul(q, k.transpose(1, 2)) / math.sqrt(self.d_model // self.num_heads)\n",
+    "        scores = F.softmax(scores, dim=-1)\n",
+    "        attention = torch.matmul(scores, v)\n",
+    "        attention = self.dropout(attention)\n",
+    "        output = self.proj_out(attention.view(-1, self.d_model))\n",
+    "        return output\n",
+    "\n",
+    "d_model = 90\n",
+    "num_heads = 8\n",
+    "mha = MultiHeadAttention(d_model, num_heads)\n",
+    "\n",
+    "data = pd.DataFrame(np.random.randint(0, 10, size=(1000, 90)))\n",
+    "\n",
+    "input_vectors = torch.tensor(data.values).float().unsqueeze(1)\n",
+    "\n",
+    "output_vectors = mha(input_vectors, input_vectors, input_vectors)\n"
    ]
   }
  ],
